--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.14",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
