--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
